# byteknife

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.lua  cmakelists.txt  commit.lua  imgui.ini
docs/: byteknife.md
source/: main.cpp  pch.h
source/core/disasm/: disassembler.cpp
source/core/elf/: header.cpp  sections.cpp  symbols.cpp
source/core/pe/: header.cpp  sections.cpp  symbols.cpp
source/ui/: app.cpp  app.hpp  theme.hpp
source/ui/app/: MenuInit.cpp  OpenBinary.cpp  WindowInit.cpp
source/ui/app/commands/: find.cpp  help.cpp  tab.cpp
source/ui/app/components/: CommandLineToken.hpp  ViewPlaceHolderContent.cpp  ViewPlaceHolderContent.hpp
source/ui/app/events/: CloseEvent.cpp  CommandSendEvent.cpp  DispatchCommandEvent.cpp  OpenBinaryEvent.cpp
source/ui/app/main/: CommandBarInit.cpp  MenuInit.cpp  OutputInit.cpp  WindowInit.cpp  WorkViewsInit.cpp
source/ui/app/settings/: BindCheckableSettings.cpp  TabSettings.cpp
source/ui/app/styles/: MnemonicStyle.hpp  Theme.hpp
source/ui/glfw/: handler.cpp
source/ui/panels/binary/disasm/: panel.cpp
source/ui/panels/binary/sections/: panel.cpp
source/ui/panels/binary/symbols/: panel.cpp
source/ui/panels/binary/xrefs/: panel.cpp
source/ui/panels/disasm/: panel.cpp
source/ui/panels/sections/: panel.cpp
source/ui/panels/symbols/: panel.cpp
source/ui/panels/xrefs/: panel.cpp
source/ui/views/binary/: view.cpp  view.hpp
source/ui/views/binary/disasm/: ddelegate.cpp  ddelegate.hpp  dmodel.cpp  dmodel.hpp  dtable.cpp  dtable.hpp  dwidget.cpp  dwidget.hpp
source/ui/views/disassembly/: view.cpp  view.hpp
source/ui/views/disassembly/code/: delegate.cpp  delegate.hpp  model.cpp  model.hpp  table.cpp  table.hpp  widget.cpp  widget.hpp
source/ui/views/hex/: hcontextmenu.cpp  hpatternedit.cpp  hpatternedit.hpp  hsearch.cpp  hviewport.cpp  hviewport.hpp  view.cpp  view.hpp
source/ui/views/output/: view.cpp  view.hpp
